- update blog post to focus on geolocation APIs for real-time applications - revise resume details including location, job titles, and project descriptions - add new projects and enhance skills section.

--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,16 +1,86 @@
 ---
-title: "Hello World"
-publishedAt: "2024-06-18"
-summary: "My first post on my new blog."
+title: "Building Real-Time Applications with Geolocation APIs"
+publishedAt: "2024-08-15"
+summary: "Exploring the implementation of geolocation services in web applications, from basic positioning to complex distance calculations."
 ---
 
-Hi there!
+# Building Real-Time Applications with Geolocation APIs
 
-```jsx
-console.log("Hello World");
+As a software developer working on location-based applications, I've discovered that geolocation APIs are powerful tools for creating interactive and responsive user experiences. In this post, I'll share insights from building a pilot emergency landing advisor system.
+
+## The Challenge
+
+Creating a real-time application that helps pilots locate nearby airports requires precise location tracking, efficient distance calculations, and reliable data management. The key challenges include:
+
+- **Real-time positioning**: Accurately tracking user location with minimal latency
+- **Distance optimization**: Calculating the shortest routes to emergency landing sites
+- **Data integrity**: Managing airport runway availability and specifications
+- **API integration**: Seamlessly connecting frontend interfaces with backend services
+
+## Implementation Approach
+
+### 1. Geolocation API Integration
+
+```javascript
+// Basic geolocation implementation
+navigator.geolocation.getCurrentPosition(
+  (position) => {
+    const { latitude, longitude } = position.coords;
+    updateUserLocation(latitude, longitude);
+  },
+  (error) => {
+    handleLocationError(error);
+  },
+  { enableHighAccuracy: true, timeout: 10000 }
+);
 ```
 
-| Header 1 | Header 2 |
-| -------- | -------- |
-| Cell 1   | Cell 2   |
-| Cell 3   | Cell 4   |
+### 2. Distance Calculation Algorithm
+
+The Haversine formula proved essential for calculating distances between coordinates:
+
+```javascript
+function calculateDistance(lat1, lon1, lat2, lon2) {
+  const R = 6371; // Earth's radius in kilometers
+  const dLat = (lat2 - lat1) * Math.PI / 180;
+  const dLon = (lon2 - lon1) * Math.PI / 180;
+  
+  const a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+    Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
+    Math.sin(dLon/2) * Math.sin(dLon/2);
+  
+  const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+  return R * c;
+}
+```
+
+### 3. Database Schema Design
+
+Efficient data storage required careful consideration of airport information:
+
+```sql
+CREATE TABLE airports (
+  id INT PRIMARY KEY,
+  name VARCHAR(255),
+  latitude DECIMAL(10, 8),
+  longitude DECIMAL(11, 8),
+  runway_length INT,
+  runway_available BOOLEAN,
+  emergency_services BOOLEAN
+);
+```
+
+## Key Learnings
+
+1. **Performance optimization**: Implementing client-side caching for frequently accessed airport data
+2. **Error handling**: Robust fallback mechanisms for location services
+3. **User experience**: Providing alternative options when primary runways are unavailable
+4. **API design**: RESTful endpoints that support real-time updates
+
+## Future Enhancements
+
+- Integration with weather APIs for landing condition assessment
+- Machine learning models for predicting runway availability
+- Mobile application development for enhanced accessibility
+
+Building location-based applications has taught me the importance of balancing accuracy with performance while maintaining a focus on user safety and experience.
